Mise en place d'un système de modification de l'apparence du site si l'on le demande dans le chat

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -27,10 +27,31 @@
                     <h2>Agents</h2>
                     <div class="agent-card">
                         <div class="agent-icon">
+                            <i class="fas fa-route"></i>
+                        </div>
+                        <div class="agent-info">
+                            <h3>Routeur</h3>
+                            <p>
+                                Analyse la requête et détermine le flux de
+                                travail
+                            </p>
+                        </div>
+                    </div>
+                    <div class="agent-card">
+                        <div class="agent-icon">
+                            <i class="fas fa-paint-brush"></i>
+                        </div>
+                        <div class="agent-info">
+                            <h3>Styliste</h3>
+                            <p>Modifie l'apparence de l'interface</p>
+                        </div>
+                    </div>
+                    <div class="agent-card">
+                        <div class="agent-icon">
                             <i class="fas fa-search"></i>
                         </div>
                         <div class="agent-info">
-                            <h3>Researcher</h3>
+                            <h3>Chercheur</h3>
                             <p>Recherche des informations précises</p>
                         </div>
                     </div>
@@ -39,14 +60,14 @@
                             <i class="fas fa-chart-line"></i>
                         </div>
                         <div class="agent-info">
-                            <h3>Analyst</h3>
+                            <h3>Analyste</h3>
                             <p>Analyse les données et extrait des insights</p>
                         </div>
                     </div>
                     <div class="agent-card">
                         <div class="agent-icon"><i class="fas fa-pen"></i></div>
                         <div class="agent-info">
-                            <h3>Writer</h3>
+                            <h3>Rédacteur</h3>
                             <p>Communique clairement les résultats</p>
                         </div>
                     </div>
